@@ -1,3 +1,10 @@
+2007-03-04  Benjamin Berg  <benjamin@sipsolutions.net>
+
+	* gnome-theme-details.c: (update_color_scheme_tab):
+	Free the engine and color scheme lists.
+	Removed some bogus old code that caused the current theme to be
+	checked instead of the new one.
+
 2007-03-04  Thomas Wood  <thos@gnome.org>
 
 	* Makefile.am:
